import React, { useState, useEffect } from 'react';
import {
  View,
  Text,
  StyleSheet,
  TextInput,
  Platform,
  Keyboard,
  FlatList,
} from 'react-native';

import { Button } from '../components/Button';
import { Modal } from '../components/Modal';
import { SkillCard } from '../components/SkillCard';

interface ISkillData {
  id: string;
  name: string;
}

export function Home() {
  const [name, setName] = useState('Visitor');
  const [newSkill, setNewSkill] = useState('');
  const [mySkills, setMySkills] = useState<ISkillData[]>([]);
  const [greeting, setGreeting] = useState('');
  const [modalVisible, setModalVisible] = useState(false);

  function handleAddNewSkill() {
    const data = {
      id: String(new Date().getTime()),
      name: newSkill,
    };
    Keyboard.dismiss();
    setMySkills(oldState => [...oldState, data]);
    setNewSkill('');
  }

  function handleRemoveSkill(id: string) {
    setMySkills(oldState => oldState.filter(skill => skill.id != id));
  }

  function handleSubmit(text: string) {
    setName(text);
    setModalVisible(false);
  }

  function handleCancel() {
    setModalVisible(false);
  }

  useEffect(() => {
    setModalVisible(true);
  }, []);

  useEffect(() => {
    const currentHour = new Date().getHours();

    if (currentHour < 12) {
      setGreeting('Good morning!');
    } else if (currentHour >= 12 && currentHour <= 18) {
      setGreeting('Good afternoon!');
    } else {
      setGreeting('Good evening!');
    }
  }, []);

  return (
    <View style={styles.container}>
      <Modal
        visible={modalVisible}
        title="What is your name?"
        description="Tell us who you are!"
        handleCancel={handleCancel}
        handleSubmit={handleSubmit}
      />
      <Text testID="welcome" style={styles.title}>
        Welcome, {name}
      </Text>
      <Text style={styles.greetings}>{greeting}</Text>
      <TextInput
        style={styles.input}
        value={newSkill}
        placeholder="New Skill"
        placeholderTextColor="#555"
        onChangeText={setNewSkill}
        testID="new-skill-input"
      />
      <Button
        title="Add"
        onPress={handleAddNewSkill}
        testID="new-skill-button"
      />
      <Text style={[styles.title, { marginVertical: 50 }]}>My Skills</Text>
      {mySkills.length > 0 && (
        <FlatList
          data={mySkills}
          testID="skills-list"
          keyExtractor={item => item.id}
          renderItem={({ item }) => (
            <SkillCard
              onPress={() => handleRemoveSkill(item.id)}
              skill={item.name}
              testID={item.name}
            />
          )}
          keyboardShouldPersistTaps="never"
          ListHeaderComponentStyle={{
            marginTop: 0,
          }}
        />
      )}
    </View>
  );
}

const styles = StyleSheet.create({
  container: {
    flex: 1,
    backgroundColor: '#121015',
    paddingVertical: 70,
    paddingHorizontal: 30,
  },
  title: {
    color: '#FFF',
    fontSize: 24,
    fontWeight: 'bold',
  },
  input: {
    backgroundColor: '#1F1E25',
    color: '#FFF',
    fontSize: 18,
    padding: Platform.OS === 'ios' ? 15 : 10,
    marginTop: 30,
    borderRadius: 7,
  },
  greetings: {
    color: '#FFF',
  },
});
